<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/serial_settings"
        android:textColor="@color/colorPrimaryDark" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/baud_rate" />

    <TextView
        android:id="@+id/baudRateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="9600 bps"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refresh" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:text="@string/comif_data"
        android:textColor="@color/colorPrimaryDark" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="?android:attr/listDivider" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/send_message_id"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/divider5"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/messageID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="3"
            android:inputType="number"
            android:minHeight="48dp"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="@+id/textView6"
            app:layout_constraintRight_toRightOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:ignore="SpeakableTextPresentCheck" />

        <View
            android:id="@+id/divider5"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="@+id/messageID"
            app:layout_constraintLeft_toRightOf="@+id/textView6"
            app:layout_constraintRight_toLeftOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/data_length"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/divider5" />

        <EditText
            android:id="@+id/dlc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="3"
            android:inputType="number"
            android:minHeight="48dp"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="@+id/textView7"
            app:layout_constraintLeft_toRightOf="@+id/divider5"
            app:layout_constraintRight_toRightOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="?android:attr/listDivider"
        android:paddingLeft="25dp"
        android:paddingRight="25dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/data_to_be_sent" />

    <EditText
        android:id="@+id/databytes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:digits="0123456789ABCDEF "
        android:ems="255"
        android:inputType="textMultiLine|textCapCharacters"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:typeface="monospace"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/send" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|fill|fill_vertical|end">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/console"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/console"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:elevation="2dp"
            android:isScrollContainer="true"
            android:text="Welcome!\n"
            android:textColor="@android:color/black"
            android:textIsSelectable="true"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/textView4"
            app:layout_constraintStart_toStartOf="@id/textView4"
            app:layout_constraintTop_toBottomOf="@id/textView4"
            tools:ignore="TouchTargetSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>